MusicPlayer: Fixed overflowing text in UI (#569)

--- a/src/packages/default/MusicPlayer/main.css
+++ b/src/packages/default/MusicPlayer/main.css
@@ -38,6 +38,7 @@
 }
 .ApplicationMusicPlayerWindow gui-vbox[data-id="Metadata"] {
   margin : 4px;
+  overflow : hidden;
 }
 .ApplicationMusicPlayerWindow gui-audio {
   display : none;
